# ntp-gps-server

./: .gitignore  README.md
backend/: Cargo.toml  README.MD  ntp-server.service
backend/config/: settings.toml
backend/public/: config.js
backend/src/: main.rs
backend/src/diagnostic/: types.rs
backend/src/http/: api.rs  context.rs  interfaces.rs  mod.rs  state.rs  swagger.rs
backend/src/ntp/: client.rs  events.rs  frac_value.rs  gps_connector.rs  mod.rs  packet.rs  request.rs  server.rs  server_state.rs  timestamp.rs
backend/src/services/: login.rs  mod.rs  network.rs
backend/src/settings/: interfaces.rs  mod.rs  store.rs
login-service/: README.md  login-detect.service  module_login.py  service.py
network-service/: README.md  module_networck.py  network-service.service  service.py
oled-connector/: README.md  oled-connector.service  oled_module.py  service.py
oled_i2c_connector/: building.MD  oled_i2c_connector.service  oled_module.py  service.py
rtc-control-service/: README.md  rtc_control_service.service  rtc_module.py  service.py
web-gui/: README.md  nginx.conf  package-lock.json  package.json
web-gui/public/: index.html
web-gui/src/: App.css  App.tsx  index.css  index.tsx
web-gui/src/api/rest/: index.ts
web-gui/src/components/button-panel/: buttonPanel.tsx
web-gui/src/components/display/: index.tsx
web-gui/src/components/gps/: index.tsx
web-gui/src/components/head-panel/: headPanel.tsx
web-gui/src/components/info-panel/: infoPanel.tsx
web-gui/src/components/login-panel/: loginPanel.tsx
web-gui/src/store/: index.ts
(+25 files in other folders)
