[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sntpc = "0.3.6"
byteorder = "1.2.0"
getopts = "0.2.14"
net2 = "0.2.29"
tokio = { version = "1.32.0", features = ["full"] }
rand = "0.6"
gpsd_proto = "0.7.0"
log = { version = "0.4", features = ["std", "serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
env_logger = "0.10.0"
async-trait = "0.1.73"
toml = "0.8.0"
utoipa =  { version = "3.3.0", features = ["rocket_extras"] }
utoipa-swagger-ui =  { version = "3.1.3", features = ["rocket"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_cors = "0.6.0-alpha2"
sysinfo = "0.28.4"
time = "0.1.44"